# llm-as-evaluator-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  entrypoint.sh  failover_test.py  pyproject.toml  requirements.txt  requirements_freezed.txt  run_celery_workers.sh  sample_files_from_summit.ipynb  test.ipynb
Cloud/sendToSlack/: main.py  requirements.txt  script-staging.sh  script.sh
agents/: __init__.py  agents.py  execution_agents.py  files.py  prompts.py  schemas.py  testcases_generator.py  tools.py  utils.py
agents/Models/: __init__.py  codeChecker.py  models.py  testcaseGraph.py  tests.py
app/: logging_config.py  main.py  pydantic_models.py  routers.py
app/db_api/: __init__.py  database.py
app/endpoints/: auth.py  export.py  gpt_crud_for_all.py  passthrough.py  pricing.py  runs.py  slim_runs.py  webhook.py
app/schemas/: auth.py  evaluations.py  evaluators.py  gpt_generated_schemas_for_all.py  passthrough.py  pricing.py
app/utils/: auth.py  query.py
common/: constants.py  pubsub_queue.py  utils.py
db_populate/: cli.py  create_eng_project.json  create_engagements.json  create_evaluators.json  create_users.json  generate_tokens.json  onboard_user.py  populate.sh  upserts.py  users.py
evaluators/: evaluator_base.py  formatter_to_issues.py  gcs_utils.py  langchain_evaluator_base.py  mixins.py
evaluators/graph_llm_modules/: output_schemas.py  (+4 more)
frontend/: .prettierrc  Dockerfile  package-lock.json  package.json  vite.config.js
llm_failover/: __init__.py  chat_failover_llm.py  config.py  key_manager.py
migrations/: Dockerfile  env.py
payload_parsers/: apple_code_translation.py  apple_turn_constructor.py
supervisor/: supervisord.conf
tests/: .env.test  conftest.py  constants.py  evaluator_runs.py  pytest.ini  test_celery_tasks.py  test_echo.py  test_gpt_cruds_getters.py  test_slim_runs.py
workers/: batch_process_run.py  celery_app.py  celery_test_req.py  celery_worker.py  slim_tasks.py  test_code_checker.ipynb  test_evaluations_creation.py  utils.py  webhook_tasks.py  worker.py  worker_concurrent.py
(+68 files in other folders)
